2013-07-25  Sergio Martin <sergio.martin@artica.es>

	* include/constants.php: Move policy constants from
	functions_policy to constants file

	* godmode/massive/massive_edit_modules.php: Change the 
	values of link/unlink in massive modules to pending to 
	link/unlink. Its the correct way of do it

2013-07-25  Sergio Martin <sergio.martin@artica.es>

	* godmode/massive/massive_operations.php
	godmode/massive/massive_edit_modules.php: Added category
	and link/unkink module from policy in massive modules edition
	for bug #2341 and feature request #293

2013-07-25  Ramon Novoa  <rnovoa@artica.es>

	* godmode/servers/manage_recontask_form.php: Added a help tip for parent
	  recursion.

2013-07-25  Sergio Martin <sergio.martin@artica.es>

	* include/functions_tags.php: Sort the tags by name for
	bug #2355

2013-07-24  Ramon Novoa  <rnovoa@artica.es>

	* godmode/alerts/configure_alert_template.php: Fixed a translation that
	  broke the javascript.

2013-07-24 Juan Manuel Ramon Vigo <juanmanuel.ramon@artica.es>

	* include/functions_forecast.php: Avoid timeout in prediction date
	item report. 

2013-07-24  Sergio Martin <sergio.martin@artica.es>

	* include/functions_visual_map.php
	include/functions_agents.php
	include/functions_modules.php
	include/functions_reporting.php
	include/constants.php
	operation/agentes/status_monitor.php
	operation/agentes/estado_agente.php
	operation/agentes/estado_monitores.php
	mobile/operation/agents.php
	mobile/operation/modules.php
	godmode/agentes/module_manager.php: Fix typo
	errors on few constants

	* operation/tree.php: Fix status check for 
	async not init modules to set the status in
	modules branch of tree view. Now it depends on
	the server

2013-07-24  Sergio Martin <sergio.martin@artica.es>

	* include/functions_modules.php
	include/functions_reporting.php
	operation/agentes/estado_monitores.php
	operation/search_agents.php: Fixed several errors on
	module status counts for bug #2338
