@@ -1,3 +1,9 @@
+2013-07-25 Juan Manuel Ramon Vigo <juanmanuel.ramon@artica.es>
+
+	* include/functions.php: Modified function get_user_language
+	. if it's called from metaconsole then user lang can be
+	updated (support for external hashed call to Pandora).
+	
 2013-07-25  Sergio Martin <sergio.martin@artica.es>
 
 	* include/constants.php: Move policy constants from
